# geodesic-dome

./: CMakeLists.txt  LICENSE  README.md  package.xml
.github/ISSUE_TEMPLATE/: issue_instructions.md
geodesic/: geodesic_dome_entry.cpp  geodesic_shape_manager.cpp  geodesic_shape_manager.hpp  triangular_geodesic_dome.cpp  triangular_geodesic_dome.hpp
